--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -1,13 +1,12 @@
+{{ reserveImport .Package.PackagePath "loadEnt" "ID" "Data" "Viewer" "loadEntX" "loadEnts" "LoadEntOptions" "AssocEdge" "loadEdges" "loadRawEdgeCountX" "loadNodesByEdge" "loadEdgeForID2" "loadEntsFromClause" "loadEntFromClause" "loadEntXFromClause" "loadRow" "loadRowX" "loadUniqueEdge" "loadUniqueNode" "AlwaysDenyRule" "PrivacyPolicy" "query"}}
+{{ reserveImport .Package.SchemaPackagePath "Field" "getFields"}}
+
 {{with .NodeData -}}
 {{/* TODO break this up to make it easier to use? */}}
 {{/* these are dependent on having the right tsconfig.json file... */}}
-{{ reserveImport "ent/ent" "loadEnt" "ID" "Data" "Viewer" "loadEntX" "loadEnts" "LoadEntOptions" "AssocEdge" "loadEdges" "loadRawEdgeCountX" "loadNodesByEdge" "loadEdgeForID2" "loadEntsFromClause" "loadEntFromClause" "loadEntXFromClause" "loadRow" "loadRowX" "loadUniqueEdge" "loadUniqueNode" }}
-{{ reserveImport "ent/privacy" "AlwaysDenyRule" "PrivacyPolicy"}}
-{{ reserveImport "ent/schema" "Field" "getFields"}}
 {{ $schemaPath := printf "src/schema/%s" .PackageName }}
 {{ reserveDefaultImport $schemaPath "schema"}}
 {{ reserveImport "src/ent/const" "EdgeType" "NodeType" }}
-{{ reserveAllImport "ent/query" "query" }}
 
 {{ range .GetUniqueNodes -}} 
   {{$packagePath := printf "src/ent/%s" .PackageName }}
@@ -116,7 +115,7 @@ export class {{$baseClass}} {
         return {{useImport "loadEntFromClause"}}(
           viewer, 
           {{$baseClass}}.loaderOptions.apply(this), 
-          query.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
+          {{useImport "query"}}.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
         );
       }
 
@@ -128,7 +127,7 @@ export class {{$baseClass}} {
         return {{useImport "loadEntXFromClause"}}(
           viewer, 
           {{$baseClass}}.loaderOptions.apply(this), 
-          query.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
+          {{useImport "query"}}.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
         );
       }
 
@@ -138,7 +137,7 @@ export class {{$baseClass}} {
       ): Promise<{{$idType}} | null> {
         const row = await {{useImport "loadRow"}}({
           ...{{$baseClass}}.loaderOptions.apply(this),
-          clause: query.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
+          clause: {{useImport "query"}}.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
         }); 
         if (!row) { return null;}
         return row['id'];
@@ -150,7 +149,7 @@ export class {{$baseClass}} {
       ): Promise<{{$dataType}} | null> {
         return await {{useImport "loadRow"}}({
           ...{{$baseClass}}.loaderOptions.apply(this),
-          clause: query.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
+          clause: {{useImport "query"}}.Eq({{$field.GetQuotedDBColName}}, {{$field.TsFieldName}}),
         }); 
       }
 
