add support for custom input names
needed when there's 2 create or 2 edit types

--- a/internal/tscode/action.tmpl
+++ b/internal/tscode/action.tmpl
@@ -5,7 +5,7 @@
 {{ $hasInput := hasInput $action -}}
 {{ $inputName := "" -}}
 {{ if $hasInput -}}
-  {{$inputName = getInputName $action -}}
+  {{$inputName = $action.GetInputName -}}
 {{ end -}}
 
 {{ reserveImport .BasePath $baseName $inputName -}}
