--- a/internal/schema/input/read_schema.tmpl
+++ b/internal/schema/input/read_schema.tmpl
@@ -1,5 +1,4 @@
-{{/* for now we are hardcoding to where this currently is. we should be better about this */ -}}
-import {Schema, Field, Edge, AssocEdge, AssocEdgeGroup} from "@lolopinto/ent/schema";
+import {Schema, Field, Edge, AssocEdge, AssocEdgeGroup} from "{{.SchemaPath}}";
 
 {{ range $schema := .Schemas -}}
   import {{$schema.Name}} from "./{{$schema.Path}}"
