--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -92,27 +92,25 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
 
   {{ $edges := edges $action}}
   {{ range $edge := $edges -}}
-    {{$singular := $edge.Edge.Singular -}}
     {{ $node := useImport $edge.Node -}}
-
     {{ if removeEdgeAction $action -}}
-      remove{{$singular}}(...ids: {{useImport "ID"}}[]): this;
-      remove{{$singular}}(...nodes: {{$node}}[]): this;
-      remove{{$singular}}(...nodes: {{useImport "ID"}}[] | {{$node}}[]): this{
-        nodes.forEach(node => this.builder.add{{$singular}}(node));
+      {{$edge.TSRemoveMethodName}}(...ids: {{useImport "ID"}}[]): this;
+      {{$edge.TSRemoveMethodName}}(...nodes: {{$node}}[]): this;
+      {{$edge.TSRemoveMethodName}}(...nodes: {{useImport "ID"}}[] | {{$node}}[]): this{
+        nodes.forEach(node => this.builder.{{$edge.TSRemoveMethodName}}(node));
         return this;
       }
     {{ else -}}
-      add{{$singular}}(...ids: {{useImport "ID"}}[]): this;
-      add{{$singular}}(...nodes: {{$node}}[]): this;
-      add{{$singular}}(...nodes: {{useImport "Builder"}}<{{$node}}>[]): this;
-      add{{$singular}}(...nodes: {{useImport "ID"}}[] | {{$node}}[] | {{useImport "Builder"}}<{{$node}}>[]): this{
-        nodes.forEach(node => this.builder.add{{$singular}}(node));
+      {{$edge.TSAddMethodName}}(...ids: {{useImport "ID"}}[]): this;
+      {{$edge.TSAddMethodName}}(...nodes: {{$node}}[]): this;
+      {{$edge.TSAddMethodName}}(...nodes: {{useImport "Builder"}}<{{$node}}>[]): this;
+      {{$edge.TSAddMethodName}}(...nodes: {{useImport "ID"}}[] | {{$node}}[] | {{useImport "Builder"}}<{{$node}}>[]): this{
+        nodes.forEach(node => this.builder.{{$edge.TSAddMethodName}}(node));
         return this;
       }
 
-      add{{$singular}}ID(id: {{useImport "ID"}} | {{useImport "Builder"}}<{{$node}}>, options?: {{useImport "AssocEdgeInputOptions"}}): this {
-        this.builder.add{{$singular}}ID(id, options);
+      {{$edge.TSAddIDMethodName}}(id: {{useImport "ID"}} | {{useImport "Builder"}}<{{$node}}>, options?: {{useImport "AssocEdgeInputOptions"}}): this {
+        this.builder.{{$edge.TSAddIDMethodName}}(id, options);
         return this;
       }
     {{end -}}
@@ -166,9 +164,8 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
         input: {{$inputName}},
       {{else if edgeAction $action -}}
         {{ range $edge := $edges -}}
-          {{$singular := $edge.Edge.Singular -}}
-          {{/* TODO this assumes there is only one edge */}}
-          {{$singular}}ID: {{useImport "ID"}},
+          {{/* TODO this assumes there is only one edge */ -}}
+          {{$edge.TSGraphQLNodeID}}: {{useImport "ID"}},
         {{end -}}
       {{ end -}}
       {{ if $action.IsDeletingNode -}}
@@ -179,6 +176,17 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
       let {{$instance}} = await {{$node}}.loadX(viewer, id);
       {{if $hasInput -}}
         return await new this(viewer, {{$instance}}, input).saveX();
+      {{else if edgeAction $action -}}
+        return await new this(viewer, {{$instance}})
+        {{ range $edge := $edges -}}
+          {{/* TODO this assumes there is only one edge */ -}}
+          {{if removeEdgeAction $action -}}
+            .{{$edge.TSRemoveMethodName}}({{$edge.TSGraphQLNodeID}})
+          {{else -}}
+            .{{$edge.TSAddMethodName}}({{$edge.TSGraphQLNodeID}})
+          {{end -}}
+        {{end -}}
+        .saveX();
       {{else -}}
         return await new this(viewer, {{$instance}}).saveX();
       {{end -}}
