generate typescript enums
have it work in the following cases:

- ent
- builder
- base action file

--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -23,6 +23,10 @@ const tableName = "{{.TableName}}";
 {{$constructor := "arg: new (viewer: Viewer, id: ID, data: Data) => T"}}
 {{$thisType := "new (viewer: Viewer, id: ID, data: Data) => T"}}
 
+{{ range .GetTSEnums -}}
+  {{ template "enum.tmpl" . -}}
+{{ end}}
+
 export class {{$baseClass}} {
 
   readonly nodeType = {{useImport "NodeType"}}.{{.Node}};
