--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -1,10 +1,13 @@
 {{ reserveImport .Package.ActionPackagePath "Action" "Builder" "WriteOperation" "Changeset" "Builder" }}
 {{ reserveImport .Package.PackagePath "Viewer" "ID" "Ent" "AssocEdgeInputOptions" }}
 
-{{ range .NodeData.GetUniqueNodesForceSelf -}} 
-  {{$packagePath := printf "src/ent/%s" .PackageName }}
-  {{ reserveDefaultImport $packagePath .Node}}
-{{ end}}
+{{ range .NodeData.GetImportPaths -}}
+  {{ if .DefaultImport -}}
+    {{ reserveDefaultImport .PackagePath .Import}}
+  {{ else -}}
+    {{ reserveImport .PackagePath .Import}}
+  {{ end -}}
+{{ end -}}
 
 {{ $builderName := printf "%sBuilder" .NodeData.Node -}}
 {{ $builderInput := printf "%sInput" .NodeData.Node -}}
