--- a/internal/schema/input/read_schema.tmpl
+++ b/internal/schema/input/read_schema.tmpl
@@ -52,6 +52,8 @@ for (const key in potentialSchemas) {
     assocEdges: assocEdges,
     assocEdgeGroups: assocEdgeGroups,
     actions: schema.actions,
+    enumTable: schema.enumTable,
+    dbRows: schema.dbRows,
   };
 }
 
