fixes for builders

--- a/internal/db/db_schema.tmpl
+++ b/internal/db/db_schema.tmpl
@@ -38,8 +38,8 @@ metadata.info["data"] = {
             {{ . -}},
           {{- end}}
         ], 
-      }
-    {{- end}}
+      },
+    {{end}}
   }
 }
 {{end}}
