--- a/internal/db/db_schema.tmpl
+++ b/internal/db/db_schema.tmpl
@@ -17,7 +17,7 @@ sa.Table({{- .TableName}}, metadata,
   {{ end -}}
 {{- end}}
 
-edges = {
+metadata.info["edges"] = {
   'public': {
 {{- with .Edges -}}
   {{- range .}}
@@ -27,7 +27,22 @@ edges = {
   }
 }
 
-metadata.info.setdefault("edges", edges)
+{{ $length := len .Data -}} {{ if ne $length 0 -}}
+metadata.info["data"] = {
+  'public':{
+    {{ range .Data -}}
+      '{{.TableName}}': {
+        'pkeys': {{.Pkeys}},
+        'rows': [
+          {{- range .Rows}}
+            {{ . -}},
+          {{- end}}
+        ], 
+      },
+    {{end}}
+  }
+}
+{{end}}
 
 def get_metadata():
   return metadata
