--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -7,7 +7,7 @@
 {{ reserveImport "src/ent/const" "EdgeType" "NodeType" }}
 
 
-{{ range .GetImportPaths -}}
+{{ range .GetImportPathsForDependencies -}}
   {{ if .DefaultImport -}}
     {{ reserveDefaultImport .PackagePath .Import}}
   {{ else -}}
@@ -197,7 +197,7 @@ export class {{$builder}} implements {{useImport "Builder"}}<{{$node}}> {
     return result;
   }
 
-  private isBuilder(node: ID | {{useImport "Ent"}} | Builder<{{useImport "Ent"}}>): node is Builder<{{useImport "Ent"}}> {
+  isBuilder(node: ID | {{useImport "Ent"}} | Builder<{{useImport "Ent"}}>): node is Builder<{{useImport "Ent"}}> {
     return (node as Builder<{{useImport "Ent"}}>).placeholderID !== undefined;
   }
 }
