parse schema in golang

--- a/internal/schema/input/read_schema.tmpl
+++ b/internal/schema/input/read_schema.tmpl
@@ -54,6 +54,7 @@ for (const key in potentialSchemas) {
     actions: schema.actions,
     enumTable: schema.enumTable,
     dbRows: schema.dbRows,
+    constraints: schema.constraints,
   };
 }
 
