--- a/internal/tscode/ent.tmpl
+++ b/internal/tscode/ent.tmpl
@@ -5,7 +5,7 @@
 {{ reserveImport $basePath $baseClass}}
 
 // we're only writing this once except with --force and packageName provided
-export default class {{.Node}} extends {{useImport $baseClass}} {
+export class {{.Node}} extends {{useImport $baseClass}} {
 
 
 }
