--- a/internal/tscode/internal.tmpl
+++ b/internal/tscode/internal.tmpl
@@ -1,11 +1,11 @@
 {{exportAll "src/ent/const"}}
 
-{{ range .Schema .Nodes}}
-  {{exportAll pathBaseModelFile .PackageName }}
+{{ range .Schema.Nodes}}
+  {{exportAll (pathBaseModelFile .NodeData.PackageName) }}
 {{ end -}}
 
-{{ range .Schema .Nodes}}
-  {{exportAll pathEntFile .PackageName }}
+{{ range .Schema.Nodes}}
+  {{exportAll (pathEntFile .NodeData) }}
 {{ end -}}
 
 {{ range .Schema.Enums }}
