--- a/internal/tscode/loadAny.tmpl
+++ b/internal/tscode/loadAny.tmpl
@@ -1,7 +1,8 @@
 {{ reserveImport "./const" "NodeType"}}
 {{ reserveImport .Package.PackagePath "loadEnt" "ID" "Viewer" "Ent" "LoadEntOptions"}}
+{{ $internalImpPath := .Package.InternalImportPath }}
 {{ range .NodeData -}}
-  {{reserveDefaultImport .PackagePath .Name}}
+  {{ reserveImport $internalImpPath .Name}}
 {{ end -}}
 
 export async function loadEntByType(
