--- a/internal/tscode/ent.tmpl
+++ b/internal/tscode/ent.tmpl
@@ -1,8 +1,9 @@
+{{$pkgPath := .Package.InternalImportPath}}
+
 {{with .NodeData -}}
-{{$basePath := printf "./generated/%s_base" .PackageName }}
 {{$baseClass := printf "%sBase" .Node }}
 
-{{ reserveImport $basePath $baseClass}}
+{{ reserveImport $pkgPath $baseClass }}
 
 // we're only writing this once except with --force and packageName provided
 export class {{.Node}} extends {{useImport $baseClass}} {
