--- a/internal/tscode/internal.tmpl
+++ b/internal/tscode/internal.tmpl
@@ -9,5 +9,7 @@
 {{ end -}}
 
 {{ range .Schema.Enums }}
-  {{exportAll pathEnumFile .}}
+  {{ if .LookupTableEnum}}
+    {{exportAll (pathEnumFile .)}}
+  {{ end -}}
 {{ end -}}
