generate a file for each entquery
we'll add privacy to each entquery eventually and would want the ability for the privacy of any entquery to be edited and not affect the base file similar to what we do for top level ents

we'd also want the ability to keep adding more methods to the base class and not have to deal with the modified subclass e.g. all the chained methods as more edges are added

--- a/internal/tscode/ent_query_base.tmpl
+++ b/internal/tscode/ent_query_base.tmpl
@@ -15,32 +15,30 @@
   {{ end}}
 
   {{$node := useImport .Node}}
+  {{$thisType := printf "new (viewer: Viewer, src: EdgeQuerySource<%s>) => T" $node}}
+
   {{range $edge := .EdgeInfo.Associations}}
-    {{$name := printf "%sQuery" $edge.TsEdgeConst -}}
+    {{$name := printf "%sQueryBase" $edge.TsEdgeConst -}}
   export class {{$name}} extends {{useImport "BaseEdgeQuery"}}<{{$node}}, {{useImport .NodeInfo.Node}}> {
     constructor(viewer: {{useImport "Viewer"}}, src: {{useImport "EdgeQuerySource"}}<{{$node}}>) {
       super(viewer, src, {{useImport "EdgeType"}}.{{$edge.TsEdgeConst}}, {{useImport .NodeInfo.Node}}.loaderOptions());
     }
 
-    static query(
+    static query<T extends {{$name}}>(
+      this: {{$thisType}},
       viewer: {{useImport "Viewer"}},
       src: {{useImport "EdgeQuerySource"}}<{{$node}}>,
-    ): {{$name}} {
-      return new {{$name}}(viewer, src);
+    ): T {
+      return new this(viewer, src);
     }
 
     {{$fNodeData := $schema.GetNodeDataForNode .NodeInfo.Node}}
     {{ range $fEdge := $fNodeData.EdgeInfo.Associations -}}
-      {{$queryName := ""}}
-      {{/* local, no import necessary */ -}}
-      {{ if eq $edge.NodeInfo.Node $nodeData.NodeInfo.Node }}
-        {{$queryName = printf "%sQuery" $fEdge.TsEdgeConst -}}
-      {{ else -}}
-        {{$queryName = useImport (printf "%sQuery" $fEdge.TsEdgeConst) -}}
-      {{ end -}}
+      {{$queryName := useImport (printf "%sQuery" $fEdge.TsEdgeConst) -}}
       query{{$fEdge.CamelCaseEdgeName}}(): {{$queryName}} {
         return {{$queryName}}.query(this.viewer, this);
       }
+      
     {{ end -}}
   }
   {{end}}
