--- a/internal/tscode/internal.tmpl
+++ b/internal/tscode/internal.tmpl
@@ -1,26 +1,3 @@
-{{exportAll "src/ent/const"}}
-
-{{ range .Schema.Nodes}}
-  {{exportAll (pathBaseModelFile .NodeData.PackageName) }}
-{{ end -}}
-
-{{ range .Schema.Nodes}}
-  {{exportAll (pathEntFile .NodeData) }}
-{{ end -}}
-
-{{ range .Schema.Enums }}
-  {{ if .LookupTableEnum}}
-    {{exportAll (pathEnumFile .)}}
-  {{ end -}}
-{{ end -}}
-
-{{ range .Schema.Nodes}}
-{{/* for now we export all the base files but eventually we want to export the individual ent files */}}
-  {{$nodeData := .NodeData -}}
-  {{if .NodeData.EdgeInfo.Associations}}
-    {{exportAll (pathBaseQueryFile .NodeData.PackageName) }}
-    {{ range $edge := .NodeData.EdgeInfo.Associations -}}
-      {{exportAll (pathEdgeQueryFile $nodeData $edge)}}
-    {{end -}}
-  {{ end -}}
-{{ end -}}
+{{range . -}}
+  {{exportAll .}}
+{{end -}}
