have the generated connections working
changes are as follows:

- depend on internal/index to make sure everything is loaded
- defer the loading of the types in the connection objects until runtime so that they're not undefined and reflected correctly by making the types returned functions instead of objects

TODO: update the tests to check connections instead of plurals
add filters etc

--- a/internal/graphql/ts_templates/connection.tmpl
+++ b/internal/graphql/ts_templates/connection.tmpl
@@ -7,7 +7,9 @@
   {{reserveImport .ImportPath .Type}}
 {{ end -}}
 
-export const {{ printf "%sType" .Edge.GetGraphQLConnectionName}} = new {{useImport "GraphQLConnectionType"}}(
- "{{.Edge.TsEdgeConst}}",
- {{useImport .NodeType }},
-);
+export const {{ printf "%sType" .Edge.GetGraphQLConnectionName}} = () => {
+  return new {{useImport "GraphQLConnectionType"}}(
+   "{{.Edge.TsEdgeConst}}",
+   {{useImport .NodeType }},
+  );
+}
