--- a/internal/graphql/ts_templates/object.tmpl
+++ b/internal/graphql/ts_templates/object.tmpl
@@ -2,6 +2,26 @@
 {{reserveImport .Package.PackagePath "ID" "RequestContext" }}
 {{reserveImport .Package.GraphQLPackagePath "GraphQLTime"}}
 
+{{ define "renderArgs"  -}}
+  {{if .Args -}}
+    {{$dict := . -}}
+    {{$base := .Base -}}
+    args: {
+      {{range $arg := .Args -}}
+        {{$arg.Name}}: {
+          description: "{{$arg.Description}}",
+          {{ range $import := .Imports -}}
+            {{ if $base.ForeignImport $import -}}
+              {{$ignored := useImport $import -}}
+            {{end -}}
+          {{ end -}}
+          type: {{$arg.FieldType -}},
+        },
+      {{end -}}
+    },
+  {{end -}}
+{{ end -}}
+
 {{$baseObj := . -}}
 
 {{/* import types that we may need e.g. UserType, ContactType, etc */}}
@@ -33,7 +53,7 @@
 
 {{/* these 2 probably need to change */}}
 {{/* TODO these definitely need to change now */}}
-{{/* node and nodeInstance don't make sense for non-ents e.g. custom types...*/}}
+{{/* node and nodeInstance do not make sense for non-ents e.g. custom types...*/}}
 {{$node := useImport .Node -}}
 {{$nodeInstance := .NodeInstance -}}
 
@@ -55,6 +75,7 @@
             {{end -}}
           {{end -}}
           type: {{$field.FieldType}},
+          {{ template "renderArgs" (dict "Base" $baseObj "Args" $field.Args) -}}
           {{if $field.HasResolveFunction -}}
             {{if $field.HasAsyncModifier -}}
               resolve: async({{$nodeInstance}}: {{$gqlNode.TSType}}) => {
@@ -97,19 +118,7 @@
   {{$fieldConfig.Arg}}
 > = {
   type: {{$fieldConfig.FieldType}},
-  args: {
-    {{range $arg := $fieldConfig.Args -}}
-      {{$arg.Name}}: {
-        description: "{{$arg.Description}}",
-        {{ range $import := .Imports -}}
-          {{ if $baseObj.ForeignImport $import -}}
-            {{$ignored := useImport $import -}}
-          {{end -}}
-        {{ end -}}
-        type: {{$arg.FieldType -}},
-      }
-    {{end -}}
-  },
+  {{ template "renderArgs" (dict "Base" $baseObj "Args" $fieldConfig.Args) -}}
   {{if $fieldConfig.ReturnTypeHint -}}
     {{ if $fieldConfig.ResolveMethodArg -}}
       resolve: async (_source, {{$fieldConfig.ResolveMethodArg}}, context:{{useImport "RequestContext"}}, _info: {{useImport "GraphQLResolveInfo"}}): {{$fieldConfig.ReturnTypeHint}} => {
