--- a/internal/tscode/action_base.tmpl
+++ b/internal/tscode/action_base.tmpl
@@ -96,8 +96,13 @@ export class {{$actionName}} implements {{useImport "Action"}}<{{$node}}> {
 
   getInput(): {{useImport $builderInput}} {
     {{ if $hasInput -}}
-      return this.input;
+      {{ if hasOnlyActionOnlyFields $action}}
+        // we use a type assertion to override the weak type detection here
+        return this.input as {{useImport $builderInput}};
       {{ else -}}
+        return this.input;
+      {{end -}}
+    {{ else -}}
       return {};
     {{end -}}
   }
