hide node from graphql schema api

--- a/internal/schema/input/read_schema.tmpl
+++ b/internal/schema/input/read_schema.tmpl
@@ -55,6 +55,7 @@ for (const key in potentialSchemas) {
     enumTable: schema.enumTable,
     dbRows: schema.dbRows,
     constraints: schema.constraints,
+    hideFromGraphQL: schema.hideFromGraphQL,
   };
 }
 
